fix: prevent table overflow with long log lines (#49)
additionally this improves infinite loading behaviour to load already
earlier than before the very end

--- a/www/style.css
+++ b/www/style.css
@@ -115,3 +115,10 @@
     display: inline;
     width: auto;
 }
+
+.table-fixed {
+    table-layout: fixed;
+}
+.ww-break-word {
+    word-wrap: break-word;
+}
